Fixed issues with loading players